# fast-overlap

./: .gitignore  .pre-commit-config.yaml  README.md  fast_overlap.c  fast_overlap.pyx  parallel_overlap.cpp  parallel_overlap.hpp  pyproject.toml  setup.cfg  setup.py  test.py  test_speedup.py
.github/workflows/: deploy.yml  test_build.yml
fast_overlap/: fast_overlap.pyx
tests/: expected-overlap.npy  test_overlap.py
