[metadata]
name = fast_overlap
author= Ian Hunt-Isaak
author_email=ianhuntisaak@g.harvard.edu
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
url=https://github.com/Hekstra-Lab/fast_overlap
platforms = Linux, Mac OS X, Windows
version = 0.1.0
