[metadata]
name = fast_overlap
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hekstra-Lab/fast_overlap
author = Ian Hunt-Isaak
author_email = ianhuntisaak@g.harvard.edu
license = BSD 3-Clause License
platforms = Linux, Mac OS X, Windows
