[metadata]
name = fast_overlap
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hekstra-Lab/fast_overlap
author = Ian Hunt-Isaak
author_email = ianhuntisaak@g.harvard.edu
license = BSD 3-Clause License
platforms = Linux, Mac OS X, Windows


[options]
install_requires =
    numpy
python_requires = >=3.7,<3.10

[options.extras_require]
test =
    numba
    scikit-image

[flake8]
exclude = docs, _version.py, .eggs, example
max-line-length = 88
docstring-convention = "numpy"